# template-cpp-cmake-vcpkg

./: CMakeLists.txt  CMakePresets.json
example/: CMakeLists.txt  addition.cpp
lib/: CMakeLists.txt  lib.cpp  lib.hpp
test/: CMakeLists.txt  hello_test.cpp
